# elastic_search_dj_example

./: .gitignore  README.md  db.sqlite3  pyproject.toml
commons/: admin.py  models.py
commons/migrations/: 0001_initial.py
main/: settings.py  urls.py
searches/: admin.py  apps.py  models.py  search_indexes.py  serializers.py  tasks.py  urls.py  views.py
searches/migrations/: 0001_initial.py
